--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 body {
-  padding-left: 5mm;
-  padding-top: 3mm;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  color: #333;
 }
 
 nav a {
@@ -11,4 +14,11 @@ nav a {
 
 nav a:hover {
   color: #0d6efd;
+}
+
+footer {
+  text-align: center;
+  padding: 1rem 0;
+  background-color: #333;
+  color: #fff;
 }
