--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,12 @@ body {
 .bg-green {
   background-color: #00ffa2;
 }
+
+.card {
+  transition: transform 0.3s ease-out;
+}
+
+.card:hover {
+  transform: scale(105%);
+  transition: 0.3s ease;
+}
