--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,16 @@ body {
   background-color: #00ffa2;
 }
 
-.card {
+.card-custom {
   transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
 }
 
-.card:hover {
+.card-custom:hover {
   transform: scale(105%);
   transition: 0.3s ease;
   box-shadow: 0 0 100px #00ffa2;
+}
+
+#stack {
+  padding-inline: 22%;
 }
