--- a/css/main.css
+++ b/css/main.css
@@ -65,3 +65,29 @@ body {
     justify-content: center;
   }
 }
+
+.carousel-image-custom {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  object-position: 10% 35%;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.7;
+    transform: translateY(200px);
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+    transform: translateY(0px);
+  }
+}
+
+.entry-animation {
+  animation: appear ease-in;
+  animation-timeline: view();
+  animation-range: entry 0% cover 50%;
+}
